<resources>
    <string name="app_name" translatable="false">六合彩好手氣</string>
    <string name="action_settings" translatable="false">\u22EE</string>
    <string name="todo" translatable="false">notTODO</string>
    <string name="lang">en</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="admob_app_id_sample" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-1262158213182717~5166009225</string>
    <string name="admob_m6_lottery" translatable="false">ca-app-pub-1262158213182717/2116377895</string>
    <string name="admob_m6_ocr" translatable="false">ca-app-pub-1262158213182717/4037619171</string>
    <string name="admob_drawn_check" translatable="false">ca-app-pub-1262158213182717/9771506630</string>


    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>


    <string name="text_single" translatable="false">單式\nSingle</string>
    <string name="text_multiple" translatable="false">複式\nMultiple</string>
    <string name="text_banker" translatable="false">胆拖\nBanker</string>
    <string name="banker_text" translatable="false">胆拖選擇號碼d\nbanker number(s)</string>
    <string name="leg_text" translatable="false">單式，複式或胆拖配腳號碼d\nsingle, multiple or \nother banker selections</string>
    <string name="action_redraw">重設</string>
    <string name="field_sincedrawn">號碼攪出相隔期數</string>
    <string name="field_timesdrawn">號碼攪出次數</string>
    <string name="field_number">號碼</string>
    <string name="format_ball">No.%1$s</string>
    <string name="str_leg">腳</string>
    <string name="str_banker">膽</string>
    <string name="beside" translatable="false">&lt; %1$s &gt;</string>
    <string name="ask_select">選下方其中一個單或雙</string>
    <string name="msg_too_many_banker">膽的數目多於5。</string>
    <string name="msg_incomplete_single">單式或複式最少選六個號碼。\n按頁面下半部分的球以作選擇。重複按多次轉為膽或腳。</string>
    <string name="msg_incomplete_banker">膽拖的膽和腳總數不可少於七個號碼。</string>
    <string name="singledraw">單式</string>
    <string name="unclassifydraw">注數：&#8212; (%1$d膽，%2$d腳)</string>
    <string name="multipledraw">複式，%1$d注 (%2$d)</string>
    <string name="bankerdraw">膽拖，%1$d注 (%2$d膽，%3$d腳)</string>
    <string name="title_activity_drawn_number_checking">過往好手氣</string>


    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="drawn_number_checking">核對過往攪珠</string>
    <string name="action_save">保存</string>
    <string name="action_list_saved">列出保存</string>
    <string name="message_save">已儲存</string>
    <string name="action_previous_next_draw">上期／下期 攪珠</string>
    <string name="sunday">日\u2003</string>
    <string name="monday">一\u2003</string>
    <string name="tuesday">二\u2003</string>
    <string name="wednesday">三\u2003</string>
    <string name="thursday">四\u2003</string>
    <string name="friday">五\u2003</string>
    <string name="saturday">六\u2003</string>
    <string name="draw_schedule_title">攪珠日期表</string>
    <string name="action_draw_schedule">攪珠日期表</string>
    <string name="message_replace">取代</string>
    <string name="action_info">使用說明</string>
    <string name="info_redraw">重新攪珠:49號碼(7行7列)随機排序，並隱藏號碼。</string>
    <string name="action_save_n_redraw">先保存，後重新</string>
    <string name="how_to_start">如何使用此程式</string>
    <string name="draw_number">攪珠期數 %1$s</string>
    <string name="draw_date">攪珠日期 %1$s</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="nothing_to_show">無法下載相關資料！</string>
    <string name="downloading_to_show">下載中》》》</string>
    <string name="prizeof">%1$s奬項</string>
    <string name="action_entry">注項</string>
    <string name="title_details">奬項資格</string>
    <string name="prize_1st">1st</string>
    <string name="prize_2nd">2nd</string>
    <string name="prize_3rd">3rd</string>
    <string name="prize_4th">4th</string>
    <string name="prize_5th">5th</string>
    <string name="prize_6th">6th</string>
    <string name="prize_7th">7th</string>
    <string name="chprize_1st">頭奬</string>
    <string name="chprize_2nd">二奬</string>
    <string name="chprize_3rd">三奬</string>
    <string name="chprize_4th">四奬</string>
    <string name="chprize_5th">五奬</string>
    <string name="chprize_6th">六奬</string>
    <string name="chprize_7th">七奬</string>
    <string name="disclaimer">＊＊＊\n本程式所提供的香港馬會六合彩資料僅供參考之用，並不保證其正確性、完整性、及時性或適用性。作者不承擔任何因使用本程式而產生的任何損失或損害之責任。使用者應自行承擔使用本程式的風險。\n如有任何疑問，請參閱香港馬會網站上的相關條款。\n＊＊＊</string>
    <string name="disclaimer1">＊＊＊本程式所有資料只供參考，敬請查看香港賽馬會之公佈。＊＊＊</string>
    <string name="action_disclaimer">免責聲明</string>
    <string name="copy2clipboard">剪貼薄</string>
    <string name="replace_numbers">取代</string>
    <string name="title_view_all">顯示所有號碼</string>
    <string name="previous_sym">㊤</string>
    <string name="next_sym">㊦</string>
    <string name="banker_indicator" translatable="false">&#x2714;</string>
    <string name="leg_indicator" translatable="false"> </string>
    <string name="action_marksix">六合彩資訊</string>
    <string name="sortby_number">順序並顯示號碼</string>
    <string name="like_option">&#x1f234;組</string>
    <string name="dislike_option">&#x1f232;組</string>
    <string name="title_option_special_group">標示 %1$s\n每組加入最少3個至最多%2$d個號碼。</string>
    <string name="chr_like" translatable="false">&#x1F234;</string>
    <string name="chr_dislike" translatable="false">&#x1F232;</string>
    <string name="group_indicator_like">合</string>
    <string name="group_indicator_dislike">禁</string>
    <string name="txt_initial_message">TextView</string>
    <string name="last_update_at">更新時間　：　%1$s</string>
    <string name="title_activity_latest_drawn">近20期攪珠</string>
    <string name="string_no_winner_count">(連續%d期頭奬沒人中)</string>
    <string name="string_win_count">(連續%d期頭奬都有人中)</string>
    <string name="string_this_win">(%d期後，頭奬又有人中)</string>
    <string name="string_this_lost">(%d期後，頭奬又落空)</string>
    <string name="consecutive">"與上期相同號碼: "</string>
    <string name="title_activity_read_ticket">ReadTicket</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_ocrticket">OCRTicket</string>
    <string name="take_photo">影相</string>
    <string name="start_capture">Capture</string>
    <string name="title_scanticket">掃瞄彩票</string>
    <string name="drawn_id_not_found">找不到相關攪珠結果</string>
    <string name="title_activity_scan_results">ScanResults</string>
    <string name="chinese_chinese">搜碼選字</string>
</resources>