<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_ticket"
    style="@style/Ticket"
    android:background="@android:color/white"
    android:padding="3dp">



        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ticket_s" />

            <TextView
                android:id="@+id/id_btn_single"
                style="@style/entry_button"
                android:text="@string/text_single" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/id_multiple"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ticket_m" />

            <TextView
                android:id="@+id/id_btn_multiple"
                style="@style/entry_button"
                android:text="@string/text_multiple" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ticket_b" />

            <TextView
                android:id="@+id/id_btn_banker"
                style="@style/entry_button"
                android:text="@string/text_banker" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.core.widget.ContentLoadingProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_connectprogress"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            tools:dividerColor="@color/color_ticket" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ticket_border"
            android:orientation="horizontal">

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="1dp"
                android:layout_height="match_parent"
                tools:dividerColor="@color/color_ticket" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/id_left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:orientation="vertical">


                <TextView
                    style="@style/entry_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:lines="@integer/ticket_lines"
                    android:text="@string/banker_text" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    tools:dividerColor="@color/color_ticket" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/id_bankers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/color_ticket_banker"
                    android:orientation="horizontal">

                    <include layout="@layout/column_of_number" />

                    <include layout="@layout/column_of_number" />

                    <include layout="@layout/column_of_number" />

                    <include layout="@layout/column_of_number" />

                    <include layout="@layout/column_of_number" />

                    <include layout="@layout/column_of_number" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="1dp"
                android:layout_height="match_parent"
                tools:dividerColor="@color/color_ticket" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/id_right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/entry_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="@integer/ticket_lines"
                    android:text="@string/leg_text" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    tools:dividerColor="@color/color_ticket" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/id_legs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">

                    <include layout="@layout/column_of_number" />

                    <include layout="@layout/column_of_number" />

                    <include layout="@layout/column_of_number" />

                    <include layout="@layout/column_of_number" />

                    <include layout="@layout/column_of_number" />

                    <include layout="@layout/column_of_number" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp" />

</androidx.appcompat.widget.LinearLayoutCompat>